Fix category inline display on small browser windows

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -763,6 +763,10 @@ header#pedalboard-actions {
     padding: 10px 0 0 0;
     position: relative;
     width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     li {
       background: rgba(17, 17, 17, 0.66);
       color: #bbb;
